# game-mods

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .versionrc.json  CMakeLists.txt  LICENSE  Makefile  README.md  dependencies.cmake  external.mk  external.ps1  game-mods.sln  make.ps1  renovate.json
cmake/: CMakeLists.txt  MakeAvailable.cmake  dependencies.cmake
lib/gamepad/src/: CMakeLists.txt  dllmain.cpp
lib/gamepad/src/GamepadHeaders/: GamepadInputHelper.h  IGamepadDispatcher.h
lib/gamepad/src/gamepad/: GamepadDispatcher.cpp  GamepadDispatcher.h
lib/stuff/: CHANGELOG.md  CMakeLists.txt  Gamepad.h  README.md  dependencies.cmake  memory.cpp  memory.h  stuff.h  stuff.vcxproj  stuff.vcxproj.filters  vcpkg.json
lib/stuff/.github/workflows/: cmake.yml
lib/stuff/addy/: addy.h
lib/stuff/function/: function.h
lib/stuff/gamepad/: Gamepad.h  GamepadEventListeners.h
lib/stuff/json/: json.cpp  json.h
lib/stuff/memory/: memory.cpp  memory.h
lib/stuff/src/: CMakeLists.txt  stuff.h
lib/stuff/src/addy/: addy.cpp
lib/stuff/src/aob/: OutputNode.h  PatternSearch.cpp  PatternSearch.h  fsm.cpp  fsm.h
lib/stuff/src/function/: function.cpp  function.h
lib/stuff/src/hook/: Line.cpp  Line.h  hook.cpp  hook.h
lib/stuff/src/json/: json.cpp
lib/stuff/src/memory/: memory.cpp  memory.h
lib/stuff/src/types/: address.h  ghidra.h  types.h
lib/updateAddresses/src/: CMakeLists.txt  dllmain.cpp
lib/updateAddresses/src/converters/: AOBConverter.h  AddressesConverter.h  BasePointerConverter.h  MetadataConverter.h  UpdateAddressesConverter.h
lib/updateAddresses/src/model/: Addresses.h  BasePointer.h  UpdateAddresses.h
lib/updateAddresses/src/plugin/: AddressFacade.cpp  AddressFacade.h  PEInfo.cpp  PEInfo.h
libs/gamepad/: CMakeLists.txt
libs/gamepad/src/: dllmain.cpp
libs/gamepad/src/GamepadHeaders/: Buttons.h  Gamepad.h  GamepadInput.h  GamepadStruct.h
libs/updateAddresses/: CMakeLists.txt  README.md
libs/updateAddresses/src/converters/: AddressesConverter.h  BasePointerConverter.h  MetadataConverter.h  UpdateAddressesConverter.h
libs/updateAddresses/src/model/: AOB.h  Addresses.h  Metadata.h
libs/updateAddresses/src/plugin/: AddressFacade.cpp
mods/mhw/: CMakeLists.txt  UpdateAddresses.yaml  addresses.meta.yaml  addresses.yaml
mods/mhw/common/: .gitignore  CHANGELOG.md  CMakeLists.txt  MHW.h  README.md
mods/mhw/common/.github/workflows/: cmake.yml
mods/mhw/common/addy/: addy.cpp  addy.h
mods/mhw/common/hooky/: IHook.cpp  IHook.h
mods/mhw/common/src/: CMakeLists.txt  MHW-deps.h  MHW.h
mods/mhw/common/src/MHW/: addy.cpp  addy.h  chat.cpp  chat.h  chatMarkup.h  memory.h  strings.h
mods/mhw/common/src/hooky/: IHook.cpp  IHook.h
mods/mhw/common/src/json/: mhw-json.cpp  mhw-json.h
mods/mhw/common/src/plugin/: IPlugin.cpp  IPlugin.h
mods/mhw/gamepad/: CHANGELOG.md  CMakeLists.txt  README.md  addresses.yaml  dllmain.cpp
mods/mhw/gamepad/.github/workflows/: cmake.yml
mods/mhw/gamepad/GamepadHeaders/: Button.h  Buttons.h  Gamepad.h  GamepadInput.h  GamepadStruct.h  IGamepadDispatcher.h
mods/mhw/gamepad/gamepad/: GamePadListener.cpp  GamePadListener.h  GamepadDispatcher.cpp  GamepadDispatcher.h  GamepadEventListeners.h
mods/mhw/gamepad/src/: CMakeLists.txt  dllmain.cpp
mods/mhw/hudToggler/: CHANGELOG.md  CMakeLists.txt  HUDToggler.vcxproj  HUDToggler.vcxproj.filters  HUD_toggles.json  README.md  addresses.yaml  dllmain.cpp  hooks.cpp
mods/mhw/hudToggler/.github/workflows/: cmake.yml
mods/mhw/hudToggler/hooky/: HUDHookHelper.cpp  HUDHookHelper.h  ToggleFunctions.cpp
mods/mhw/hudToggler/src/: CMakeLists.txt  dllmain.cpp
mods/mhw/hudToggler/src/hooky/: ToggleFunctions.cpp
mods/mhw/hudToggler/src/model/: Addresses.h  AddressesConverter.h
mods/mhw/hudToggler/src/plugin/: HUDHookHelper.cpp  HUDHookHelper.h  ToggleFunctions.cpp  strings.h
mods/mhw/itemBoxTracker/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  ItemBoxTracker.sln  MHWItemBoxTracker.sln  NuGet.Config  README.md
mods/mhw/itemBoxTracker/.dependabot/: config.yml
mods/mhw/itemBoxTracker/.github/: dependabot.yml
mods/mhw/itemBoxTracker/.github/ISSUE_TEMPLATE/: bug_report.md
mods/mhw/itemBoxTracker/.github/workflows/: build-release-ci.yml  pull-request.yml
mods/mhw/itemBoxTracker/ItemBoxTracker/: ItemBoxTracker.csproj  Main.cs  MainExtension.cs
mods/mhw/itemBoxTracker/ItemBoxTracker/Config/: ConfigLoader.cs  DeprecatedItemBoxTrackerConfig.cs  ItemBoxTrackerConfig.cs  ItemBoxWidgetSettings.cs  ItemConfig.cs  TrackingTabConfig.cs
mods/mhw/itemBoxTracker/ItemBoxTracker/Controller/: ItemBoxTracker.cs
mods/mhw/itemBoxTracker/ItemBoxTracker/GUI/: AutoSuggestBox.xaml  AutoSuggestBox.xaml.cs  ButtonOverride.xaml  DragAndDropper.xaml  DragAndDropper.xaml.cs  ItemBoxTracker.xaml.cs  ItemDataTemplate.xaml  Settings.xaml  Settings.xaml.cs  SettingsTab.xaml  SettingsTab.xaml.cs
mods/mhw/itemBoxTracker/MHWItemBoxTracker/: MHWItemBoxTracker.csproj  Main.cs  module.json
mods/mhw/itemBoxTracker/scripts/: download-changelog.ps1  gen-json-schema.csx  gen-module-json.csx  gen-settings-json.csx
mods/mhw/loader/: CMakeLists.txt  README.md
mods/mhw/loader/src/: dllmain.cpp  windows.h
mods/mhw/loader/src/loader/: log.h  (+1 more)
mods/mhw/lockOn2MapPin/: CHANGELOG.md  CMakeLists.txt  LICENSE  LockOn2MapPin.vcxproj  LockOn2MapPin.vcxproj.filters  README.md  addresses.yaml  dllmain.cpp  mhw_functions.cpp  mhw_functions.h
mods/mhw/lockOn2MapPin/hooky/: LockOn2MapPin.cpp  LockOn2MapPin.h  LockOn2MapPinHelpers.cpp
mods/mhw/lockOn2MapPin/src/: CMakeLists.txt  dllmain.cpp
mods/mhw/plugin/: LICENSE  README.md  addresses.json  addresses.meta.yaml  addresses.yaml
mods/mhw/plugin/scripts/: merge-yaml.py
mods/mhw/returnTimer/: CMakeLists.txt  README.md  addresses.yaml  vcpkg.json
mods/mhw/returnTimer/src/: CMakeLists.txt  dllmain.cpp
mods/mhw/theFlash/: CHANGELOG.md  CMakeLists.txt  README.md  TheFlash.json  TheFlash.yaml  addresses.yaml
mods/mhw/theFlash/src/: CMakeLists.txt  dllmain.cpp
mods/mhw/toggleSubtitles/: CMakeLists.txt
mods/mhw/toggleSubtitles/src/: dllmain.cpp
(+150 files in other folders)
