project(mhw-common)
FILE(GLOB_RECURSE mhwSources CONFIGURE_DEPENDS ${PROJECT_SOURCE_DIR} *.h *.cpp)
add_library(mhw-common STATIC ${mhwSources})
target_include_directories(mhw-common PUBLIC .)
target_compile_features(mhw-common PUBLIC cxx_std_17)
target_link_libraries(mhw-common PUBLIC nlohmann_json::nlohmann_json stuff)
