project(LockOn2MapPin)
FILE(GLOB_RECURSE LockOn2MapPinSources CONFIGURE_DEPENDS ${PROJECT_SOURCE_DIR} *.h *.cpp)
target_compile_definitions(mhw-common PRIVATE STUFF_PLUGIN)
add_library(LockOn2MapPin SHARED ${LockOn2MapPinSources})
target_compile_features(LockOn2MapPin PRIVATE cxx_std_17)
target_link_libraries(LockOn2MapPin PRIVATE stuff mhw-common loader)
